This is mandatory

--- a/C and E Test/C and E Test/C and E Test.csproj
+++ b/C and E Test/C and E Test/C and E Test.csproj
@@ -209,9 +209,14 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css">
+      <DependentUpon>bootstrap-theme.css</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\BEARPAW_-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -222,6 +227,10 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="fonts\BEARPAW_-webfont.eot" />
+    <Content Include="fonts\BEARPAW_-webfont.ttf" />
+    <Content Include="fonts\BEARPAW_-webfont.woff" />
+    <None Include="bundleconfig.json" />
     <None Include="Properties\PublishProfiles\CandETest20160520031241.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
