--- a/C and E Test/C and E Test/C and E Test.csproj
+++ b/C and E Test/C and E Test/C and E Test.csproj
@@ -209,9 +209,9 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap-theme.css" />
-    <Content Include="Content\bootstrap-theme.min.css">
-      <DependentUpon>bootstrap-theme.css</DependentUpon>
+    <Content Include="Content\bootstrap-thisone.css" />
+    <Content Include="Content\bootstrap-thisone.min.css">
+      <DependentUpon>bootstrap-thisone.css</DependentUpon>
     </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -282,6 +282,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
